# mipidsi-examples

./: Cargo.toml
examples/: image.rs  scroll.rs  shapes.rs
src/: main.rs
