[package]
name = "mipidsi-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"
hifive1 = { version = "0.10.0", features = ["board-redv"] }
mipidsi = "0.2.0"
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.0"
